--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "classnames": "^2.3.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "formik": "^2.2.9",
+    "history": "^5.3.0",
     "mobx": "^6.7.0",
     "mobx-react-lite": "^3.4.0",
     "normalize.css": "^8.0.1",
@@ -22,6 +23,7 @@
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-error-boundary": "^3.1.4",
     "react-intl": "^6.2.5",
     "react-router-dom": "^6.5.0",
     "react-scripts": "5.0.1",
