--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "json-server": "^0.17.0",
+    "nodemon": "^2.0.20",
     "prettier": "2.4.1"
   },
   "dependencies": {
