--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "dotenv-expand": "^5.1.0",
     "eslint": "^8.3.0",
     "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-webpack-plugin": "^3.1.1",
     "file-loader": "^6.2.0",
@@ -125,7 +126,8 @@
     "extends": [
       "react-app",
       "react-app/jest",
-      "plugin:react-hooks/recommended"
+      "plugin:react-hooks/recommended",
+      "plugin:cypress/recommended"
     ],
     "overrides": [
       {
