--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@babel/core": "^7.16.0",
+    "@ckeditor/ckeditor5-build-balloon": "^36.0.1",
+    "@ckeditor/ckeditor5-react": "^5.1.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@svgr/webpack": "^5.5.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -24,6 +26,7 @@
     "browserslist": "^4.18.1",
     "camelcase": "^6.2.1",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
+    "ckeditor5": "^36.0.1",
     "classnames": "^2.3.2",
     "css-loader": "^6.5.1",
     "css-minimizer-webpack-plugin": "^3.2.0",
@@ -38,6 +41,7 @@
     "formik": "^2.2.9",
     "fs-extra": "^10.0.0",
     "history": "^5.3.0",
+    "html-react-parser": "^3.0.12",
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.3",
@@ -91,6 +95,7 @@
     "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^6.5.14",
     "@storybook/testing-library": "0.0.13",
+    "@types/ckeditor__ckeditor5-build-balloon": "^29.1.1",
     "babel-plugin-named-exports-order": "0.0.2",
     "css-loader": "^6.7.3",
     "cypress": "^12.0.2",
